# hash-perf

./: Cargo.toml  README
benches/: hashbench.rs
src/: lib.rs
