[package]
name = "hash-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
blake2 = "0.10.6"
md5 = "0.7.0"
once_cell = "1.19.0"
rand = "0.8.5"
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hashbench"
harness = false
